# android-camera-barcode-mrz-document-scanner

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: camerax_main.xml  dce_main.xml  entry_choice.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
examples/10.x/driver_license/: README.md
examples/10.x/driver_license/dynamsoft/: build.gradle  settings.gradle
examples/10.x/driver_license/dynamsoft/app/: build.gradle
examples/10.x/driver_license/google/: build.gradle
examples/10.x/mrz/: .gitignore  README.md  build.gradle  release_dependencies.gradle  settings.gradle
examples/10.x/mrz/app/: build.gradle
examples/9.x/ARCore/: README.md  build.gradle  gradle.properties
examples/9.x/ARCore/app/: build.gradle
examples/9.x/camerax_ml_qr/: README.md  settings.gradle
examples/9.x/camerax_ml_qr/app/: build.gradle
examples/9.x/dense_qr/: .project  README.md  settings.gradle
examples/9.x/dense_qr/app/: .project  build.gradle
examples/9.x/ndk_jni/: .gitignore  README.md
examples/9.x/ndk_jni/Application/: build.gradle
examples/9.x/ndk_jni/Application/src/main/cpp/: CMakeLists.txt  android_main.cpp
examples/9.x/shutter_speed/: README.md
examples/9.x/shutter_speed/Application/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  help-doc.html  index-all.html  index.html
opencv/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
(+301 files in other folders)
